<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_blue_bright"
        android:gravity="start"
        android:text="@string/str1" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:text="@string/str2" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_purple"
        android:gravity="center_horizontal"
        android:text="@string/str3" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_red_light"
        android:gravity="end"
        android:text="@string/str4" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_green_light"
        android:layout_gravity="start"
        android:text="@string/str5" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_purple"
        android:layout_gravity="center"
        android:text="@string/str6" />

    <TextView
        android:id="@+id/tv7"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:background="@android:color/holo_red_light"
        android:text="@string/str7" />
</LinearLayout>
